
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int getservbyname (char*,char*) ;
 char* malloc (int ) ;
 int memset (char*,char,int ) ;

int main(int argc, char *argv[]){
 char *cycek;
 cycek=malloc(atoi(argv[1]));

 if(!cycek) return 1;
 memset(cycek,'A',atoi(argv[1]));

 getservbyname(cycek,"tcp");

 return 0;
}
